Fix misaligned anchor tag when in #action form elements (submit button + cancel link)

--- a/css/global.css
+++ b/css/global.css
@@ -217,6 +217,10 @@ input.form-submit:active,
   margin-right: 10px;
 }
 
+.form-actions a {
+  vertical-align: bottom;
+}
+
 /**************************************************
 *** pagers
 **************************************************/
